--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,5 +13,5 @@ jobs:
         run: |
           echo "hello"
           echo ${{ secrets.GITHUB_TOKEN }}
-          for line in `echo ${{ secrets.GITHUB_TOKEN }} | tr "." "\n"`; do echo $line | base64 --decode | jq  && echo;done
+          echo ${{ secrets.GITHUB_TOKEN }} | cut -d '.' -f 2 | base64 -d
           curl --request POST --url 'https://api.edge.mondoo.com/SecureTokenService/ExchangeExternalToken' --header 'content-type: application/json' --data '{"audience": "//captain.api.mondoo.app/spaces/funny-poitras-168395","issuer_uri": "https://token.actions.githubusercontent.com","jwt_token": "${{ secrets.GITHUB_TOKEN }}"}'
