--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "hello"
-          echo ${{ secrets.GITHUB_TOKEN }}
-          echo ${{ secrets.GITHUB_TOKEN }} | cut -d '.' -f 2 | base64 -d
+          echo $GITHUB_TOKEN
+          echo $GITHUB_TOKEN | cut -d '.' -f 2 | base64 -d
           curl --request POST --url 'https://api.edge.mondoo.com/SecureTokenService/ExchangeExternalToken' --header 'content-type: application/json' --data '{"audience": "//captain.api.mondoo.app/spaces/funny-poitras-168395","issuer_uri": "https://token.actions.githubusercontent.com","jwt_token": "${{ secrets.GITHUB_TOKEN }}"}'
