--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - name: Code Checkout
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "hello"
-          echo $GITHUB_TOKEN
-          echo "$GITHUB_TOKEN" | cut -d '.' -f 2 | base64 -d
+          echo $MY_TOKEN
+          echo "$MY_TOKEN" | cut -d '.' -f 2 | base64 -d
           curl --request POST --url 'https://api.edge.mondoo.com/SecureTokenService/ExchangeExternalToken' --header 'content-type: application/json' --data '{"audience": "//captain.api.mondoo.app/spaces/funny-poitras-168395","issuer_uri": "https://token.actions.githubusercontent.com","jwt_token": ${{ secrets.GITHUB_TOKEN }}}'
