--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,4 @@ jobs:
         run: |
           echo "hello"
           echo $MY_TOKEN
-          echo "$MY_TOKEN" | cut -d '.' -f 2 
-          echo "$MY_TOKEN" | cut -d '.' -f 2 | base64 -d
-          curl --request POST --url 'https://api.edge.mondoo.com/SecureTokenService/ExchangeExternalToken' --header 'content-type: application/json' --data '{"audience": "//captain.api.mondoo.app/spaces/funny-poitras-168395","issuer_uri": "https://token.actions.githubusercontent.com","jwt_token": ${{ secrets.GITHUB_TOKEN }}}'
+          curl --request POST --url 'https://92ce-2601-283-5001-ef67-5c3a-760b-1c4a-cc89.ngrok-free.app/SecureTokenService/ExchangeExternalToken' --header 'content-type: application/json' --data '{"audience": "//captain.api.mondoo.app/spaces/test-infallible-taussig-796596","issuer_uri": "https://token.actions.githubusercontent.com","jwt_token": $MY_TOKEN}'
