--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   check-token:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: Code Checkout
         env:
